<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="toolbar" type="id"/>
    <item name="rv_fav_match" type="id" />
    <item name="rv_fav_team" type="id" />
    <item name="srl_fav_team" type="id" />
</resources>