<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.matchescontainer.schedule.ScheduleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
...
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_schedule_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:visibility="gone" />
    </RelativeLayout>

...
