<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_favorites"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_to_fav"
        android:title="@string/menu_favorites"/>
</menu>