<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/bg_ripple_white"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:id="@+id/ll_team_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_team_badge"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_image" />

        <TextView
            android:id="@+id/tv_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Real Madrid" />
    </LinearLayout>

</android.support.v7.widget.CardView>